--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
-	"editor.tabSize": 4,
+	"editor.tabSize": 2,
 	"editor.detectIndentation": false,
-	"editor.renderWhitespace": "all"
+	"editor.renderWhitespace": "all",
+	"editor.insertSpaces": false,
 }
