add dvb classification scheme  analysis

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,5 +7,6 @@
 
 	"prettier.singleQuote": true,
 	"prettier.useTabs": true,
-	"prettier.tabWidth": 2
+	"prettier.tabWidth": 2,
+	"prettier.printWidth": 160
 }
