save script pages

--- a/.github/workflows/webpack.yml
+++ b/.github/workflows/webpack.yml
@@ -34,6 +34,12 @@ jobs:
 
     - name: Show Results
       run: |
-        ls -l
+        ls -l .
+
+    - name: Provision
+      run: |
+        mkdir ./serve
+        cp ./dist/script/* ./serve
+  
 
 
