--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,8 @@
 {
 	"editor.tabSize": 2,
-	"editor.detectIndentation": false,
+	"editor.detectIndentation": true,
 	"editor.renderWhitespace": "all",
-	"editor.insertSpaces": true,
+	"editor.insertSpaces": false,
 	"files.eol": "\n",
 
 	"prettier.singleQuote": true,
