--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "codec-string",
   "version": "0.1.3",
-  "description": "decode the codec= string in a media mime type",
+  "description": "decode the codecs= string in a media mime type",
   "type": "module",
   "engines": {
     "node": ">=16"
@@ -28,17 +28,17 @@
   "author": "paul_higgs@hotmail.com",
   "license": "BSD",
   "dependencies": {
-    "@babel/preset-env": "^7.22.20",
-    "babel-loader": "^9.1.3",
+    "@babel/preset-env": "^7.26.0",
+    "babel-loader": "^9.2.1",
     "clean-webpack-plugin": "^4.0.0",
     "eslint-plugin-import-quotes": "^0.0.1",
-    "eslint-webpack-plugin": "^4.0.1",
-    "html-webpack-plugin": "^5.5.3",
-    "webpack-merge": "^5.9.0"
+    "eslint-webpack-plugin": "^4.2.0",
+    "html-webpack-plugin": "^5.6.3",
+    "webpack-merge": "^6.0.1"
   },
   "devDependencies": {
     "webpack-cli": "^5.1.4",
-    "webpack-dev-server": "^4.15.1"
+    "webpack-dev-server": "^5.1.0"
   },
 	"repository": {
 		"type": "git",
