--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   "scripts": {
     "clean": "rm -rf dist",
     "build": "webpack --config ./webpack-esm.cjs --mode production && webpack --config ./webpack-cjs.cjs --mode production --no-output-clean && webpack --config ./webpack-script.cjs --mode production --no-output-clean",
-    "lint": "eslint 'src/*.js'",
+    "lint": "eslint src/*.js",
     "start": "webpack serve --config ./webpack-esm.cjs --mode development",
     "test": "echo \"Error: no test specified\" && exit 0"
   },
