--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@eslint/js": "^9.27.0",
     "eslint": "^9.27.0",
     "globals": "^16.2.0",
+    "vitest": "^3.2.2",
     "webpack-cli": "^6.0.1",
     "webpack-dev-server": "^5.2.1"
   },
