exports should point to built code not source
The exports section should reference the built code, not the original
source. This is required so that the correct import syntax is used for
each varient.

--- a/package.json
+++ b/package.json
@@ -8,9 +8,9 @@
   },
   "exports": {
     ".": {
-      "import": "./src/index.js",
-      "require": "./src/index.cjs",
-      "script": "./src/index.cjs"
+      "import": "./dist/esm/codec-string.js",
+      "require": "./dist/cjs/codec-string.js",
+      "script": "./dist/script/codec-string.js"
     },
     "./package.json": "./package.json"
   },
