--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.27.0",
+    "del-webpack-plugin": "^2.1.0",
     "eslint": "^9.27.0",
     "globals": "^16.2.0",
     "jsdom": "^26.1.0",
